--- a/Project/Report/references.bib
+++ b/Project/Report/references.bib
@@ -87,10 +87,6 @@
 distance than 6 m}
 }
 
-<<<<<<< HEAD
-
-=======
->>>>>>> origin/master
 @article{Ferris,
   author = {Ferris III L, Kassoff A, Bresnick H, Bailey I},
   title = {New visual acuity charts for clinical research}
@@ -99,4 +95,10 @@ distance than 6 m}
 @article{Bailey,
   author = {Bailey I, Lovie J},
   title = {Design Principles for Visual Acuity Letter Charts}
+}
+
+@article{vision_loss,
+  author = {Jinan B Saaddine, K.M Venkat Narayan, Frank Vinicor},
+  title = {Vision loss: a public health problem?},
+  year = 2003
 }
