--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,a4paper,notitlepage]{report}
+ \documentclass[12pt,a4paper,notitlepage]{report}
 \usepackage[utf8]{inputenc}
 \usepackage{cite}
 \usepackage{etoolbox}
@@ -8,6 +8,10 @@
 \usepackage{amsmath}
 \usepackage{titlesec}
 \usepackage[nottoc, notlof]{tocbibind}
+% might need later, for diagrams
+%\usepackage{tikz}
+%\usetikzlibrary{arrows,shadows}
+%\usepackage{pgf-umlsd}
 
 %%%%%%%% Bibliografi %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Ändrar namnet på referens headern
@@ -203,16 +207,26 @@ The ETDRS chart consists of 14 rows with 5 optotypes on each row. The size of ea
 \caption{The angle v is used to calculate the size in LogMAR of the optotype.\label{fig:logmar_calculation}}
 \end{figure} 
 
-The optotypes on the top row of the chart is of the size 1.0 LogMAR and then each row below is decremented by 0.1 LogMAR to the last row which is -0.3 LogMAR. This means that each optotype is approximately 1.2589 the height of the optotypes on the row below \cite{Ferris}. The spacing between each optotype is equal to the width of an optotype from the same row and the spacing between each row is equal to the height of an optotype on the lower row.
+The optotypes on the top row of the chart is of the size 1.0 LogMAR and then each row below is decremented by 0.1 LogMAR to the last row which is -0.3 LogMAR. This means that each optotype is approximately 1.2589 the height of the optotypes on the row below \cite{Ferris}. The spacing between each optotype is equal to the width of an optotype from the same row and the spacing between each row is equal to the height of an optotype on the lower row (see fig. \ref{fig:etdrs_chart_sizes}).
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=120mm]{images/etdrs_chart_sizes.png}
+\caption{The sizes and positions of the first three optotypes of row $n$ and $n+1$ where $x_n \approx 1.2589 x_{n+1}$. \label{fig:etdrs_chart_sizes}}
+%\caption{The gray squares represents optotypes that on the upper row has a width and height of $x_n$ and on the lower row $x_{n+1}$.  \label{fig:etdrs_chart_sizes}}
+\end{figure} 
+
+\subsection{Axanivis Charts}
+Description of the axanivis charts!!! need some document or reference for this.
 
 \chapter{Implementation}
 \section{Methods}
 \subsection{System structure}
 The system is divided into three major parts, an Android application, a server and networking. The Android application and server is modeled after the MVC (Model-View-Controller) pattern, where the model is the logic and the view is the GUI. The controller part is the part on the Android application that listens for button clicks and gestures. Usually the networking would fall under controller in the MVC pattern but was, in this system, chosen to be a separate larger structure. Figure \ref{system_structure} shows how the different parts are connected.
 
-\begin{figure}[h]
+\begin{figure}[ht!]
 \centering
-\includegraphics[width=120mm]{images/system_structure.png}
+\includegraphics[width=90mm]{images/system_structure.png}
 \caption{Overview of the system structure\label{system_structure}}
 \end{figure}
 
@@ -239,28 +253,49 @@ Network communication will be handled using a submit-poll system. The networking
 The network communication between the client and the server consists of two parts. The first part is server detection and the second is server communication. All network communications are handled in threads separate from the main thread as the network operations would halt the flow of the program otherwise. Once the operations are complete and the main threads finds it convenient, it will grab the result from the network threads.
 
 \subsubsection{Server detection}
-In order to detect all servers on the network, the Android application sends out a UDP (User Datagram Protocol) broadcast message containing server discovery request. The application will then listen for incoming server responses. Once the application haven't received anything for three seconds from the last server response, it will stop listening and determine that all available servers have responded. The names and addresses of the servers will then be extracted from each response message and stored in a list so the user can choose which one to connect to.
+In order to detect all servers on the network, the Android application sends out a discovery request message 5 times with a 1 second interval using UDP (User Datagram Protocol) on the networks broadcast address. The servers, which constantly listens for broadcasts containing the correct message, will then respond to that message with it's name, again using UDP. Once the Android application receives a response it adds the server to a list. The user can then choose to connect to one of the found servers or attempt the detection again if no servers where found.
 
-The servers themselves are constantly listening for broadcasts containing the server discovery request. Once a request is received, the server will send a response and then keep listening for more requests.
+Since UDP is a connectionless protocol, there is no guarantee that the server actually receives the message, the discovery request message is sent 5 times, which means the server have 5 chances to receive the message and respond to it. This means that the server will receive a discovery request 0 to 5 times and respond to it the same number of times. To avoid duplicate server entries in the list, a server is only added if it doesn't already exist in the list.
+
+%In order to detect all servers on the network, the Android application sends out a UDP (User Datagram Protocol) broadcast message containing server discovery request. The application will then listen for incoming server responses. Once the application haven't received anything for three seconds from the last server response, it will stop listening and determine that all available servers have responded. The names and addresses of the servers will then be extracted from each response message and stored in a list so the user can choose which one to connect to.
+
+%The servers themselves are constantly listening for broadcasts containing the server discovery request. Once a request is received, the server will send a response and then keep listening for more requests.
 
 \subsubsection{Server communication}
-The communication between the client and server is handled using simple TCP (Transimission Control Protocol) messages. The TCP messages are used for sending and receiving commands and are structured as three lines of text (Example \ref{tcp_message}). The first line is a \textit{check} word and is the same for every \textit{command}. The second line is a \textit{command} word which tells the receiver what to do and the third line is the \textit{data} required for the \textit{command}. In many cases the simple \textit{command} is enough and the \textit{data} is left empty.
+The communication between the Android application and the connected server is handled using strings of characters divided to three lines using line separators. The first line consists of a check word, which is the same for every message. If this check word is wrong or doesn't exist, the server will ignore the message. The second line is the command to the server. This could be a command to set the currents chart type or size to something else. The third line is the data required for the command. The data can be empty (null) or a string of characters. Depending on the command, the string of characters can be read as either a sequence of ascii characters or a sequence of numbers.
 
-\begin{center}
-\renewcommand{\lstlistingname}{Example}
+The messages are sent using a TCP (Transmission Control Protocol) connection to the server, which guarantees that the entire message will be correct and that it will be retrieved by the server as long as the server exists on the network. If there are no servers available on the network, the user will be informed and have to reconnect to a server.
+
+%The communication between the client and server is handled using simple TCP (Transimission Control Protocol) messages. The TCP messages are used for sending and receiving commands and are structured as three lines of text (Example \ref{tcp_message}). The first line is a \textit{check} word and is the same for every \textit{command}. The second line is a \textit{command} word which tells the receiver what to do and the third line is the \textit{data} required for the \textit{command}. In many cases the simple \textit{command} is enough and the \textit{data} is left empty.
+
+%\begin{center}
+%\renewcommand{\lstlistingname}{Example}
+%  \lstset{%
+%    title=Example of TCP message,
+%    basicstyle=\ttfamily\footnotesize\bfseries,
+%    xleftmargin=.2\textwidth, xrightmargin=.2\textwidth
+%  }
+%\begin{lstlisting}[caption=TCP Message, label=tcp_message]
+%CHECK_WORD
+%LARGE_CHART
+%NULL
+%\end{lstlisting}
+%\end{center}
+
+\begin{figure}[h]
   \lstset{%
-    title=Example of TCP message,
-    basicstyle=\ttfamily\footnotesize\bfseries,
-    xleftmargin=.2\textwidth, xrightmargin=.2\textwidth
+    basicstyle=\ttfamily\bfseries,
+    xleftmargin=.4\textwidth, xrightmargin=.2\textwidth
   }
-\begin{lstlisting}[caption=TCP Message, label=tcp_message]
-CHECK_WORD
-LARGE_CHART
-NULL
+\begin{lstlisting}
+AXANIVIS
+DISTANCE
+500
 \end{lstlisting}
-\end{center}
+\caption{A message with the check word \textit{AXANIVIS}, the command \mbox{\textit{DISTANCE}} and the data \textit{500}. This message would make the server to resize the currently active chart to be suitable for a user watching from 500 centimeters. \label{fig:example_message}}
+\end{figure}
 
-
+%\label{system_structure}
 
 
 
